--- a/ft_onion/nginx/nginx.conf
+++ b/ft_onion/nginx/nginx.conf
@@ -1,5 +1,5 @@
 
-user  nginx;
+user  www-data;
 worker_processes  auto;
 
 error_log  /var/log/nginx/error.log notice;
@@ -28,5 +28,13 @@ http {
 
     #gzip  on;
 
-    include /etc/nginx/conf.d/*.conf;
+    server {
+    	   listen 80 default_server;
+
+	   root /usr/share/nginx/html;
+	   
+	   location / {
+		    index index.html;
+	   }
+    }
 }
