--- a/Inquisitor/ftp_client/Dockerfile
+++ b/Inquisitor/ftp_client/Dockerfile
@@ -1,4 +1,7 @@
 FROM ubuntu:latest
 RUN apt update && \
-    apt install -y ftp
+    apt install -y \
+    ftp \
+    net-tools
+    
 WORKDIR /home/ubuntu
