--- a/Inquisitor/spoofer/Dockerfile
+++ b/Inquisitor/spoofer/Dockerfile
@@ -2,12 +2,14 @@ FROM python:3
 
 WORKDIR /usr/src/app
 
+RUN apt update && \
+    apt install -y libpcap-dev
+
 COPY requirements.txt ./
 RUN pip install --no-cache-dir -r requirements.txt
 
 RUN useradd -m inquisitor
 WORKDIR /home/inquisitor
 
-COPY --chown=inquisitor --chmod=700 inquisitor ./inquisitor
+# COPY --chown=inquisitor --chmod=700 inquisitor ./inquisitor
 
-USER inquisitor
