--- a/Inquisitor/spoofer/Dockerfile
+++ b/Inquisitor/spoofer/Dockerfile
@@ -6,7 +6,8 @@ RUN apt update && \
     apt install -y libpcap-dev
 
 COPY requirements.txt ./
-RUN pip install --no-cache-dir -r requirements.txt
+RUN pip install --upgrade pip && \
+    pip install --no-cache-dir -r requirements.txt
 
 RUN useradd -m inquisitor
 WORKDIR /home/inquisitor
